--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona Główna</title>
+    <title>EclairNet</title>
     <link rel="stylesheet" href="style.css"> <!-- Link do pliku CSS -->
 </head>
 <body>
 
 <header>
-    <h1>Moja Strona</h1>
+    <h1>EclairNet</h1>
     <nav>
         <a href="#">Strona Główna</a>
         <a href="#">Ustawienia</a>
